# AppliWeb-WASM-Demo

./: .gitignore  README.md  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
app/: Cargo.toml
app/src/: main.rs
app/ui/: app-window.slint
backend/: flask_server.py
client/: settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/main/java/client/: App.java
client/src/pack/: Controller.java  Serv.java  SysInfo.java
client/src/webcontent/: index.html  liste.jsp
machine/: Cargo.toml
machine/src/: main.rs
react-client/: package-lock.json  package.json
react-client/src/: App.js  config.json  copyApp.js
react-client/src/components/: Login.js  Menu.js  RenderTable.js  RequireLogin.js
react-client/src/pages/: Home.js  Manage.js  Stats.js  UseToken.js  dashboard.js  layout.js  login.js  useToken.js
react-client/src/pages/admin/: admin_create.js
react-client/src/pages/creation/: CreateComputerForm.js  CreateGroupForm.js  CreateMembershipForm.js  CreateUserForm.js
react-client/src/pages/stats_navigation/: ComputerDetails.js  GroupDetails.js  UserDetails.js
serveur/: .gitignore  pom.xml
serveur/data/: db.properties  db.script
serveur/src/main/java/web/projet/serveur/: Account.java  AccountRepository.java  Computer.java  ComputerRepository.java  Controller.java  Group.java  GroupRepository.java  Log.java  LogRepository.java  Membership.java  MembershipRepository.java  Process.java  ProcessRepository.java  ResourceUsage.java  ResourceUsageRepository.java  Session.java  (+10 more)
serveur/src/main/resources/: application.properties
(+1 files in other folders)
