[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.12.14", features = ["json"] }
serde = "1.0.219" 
slint = "1.8.0"
tokio = {version = "1.44.1", features = ["full"]}
getrandom = { version = "0.2.2", features = ["js"] }

[build-dependencies]
slint-build = "1.8.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
